# homework13.1

./: Class_Category.py  Class_Product.py  README.md  functions.py  pyproject.toml  task_1.py
src/: class_category.py  class_product.py  functions.py
tests/: for_test.json  test_Category.py  test_Product.py  test_category.py  test_functions.py  test_product.py  test_task_1.py
