[tool.poetry]
name = "homework13-1"
version = "0.1.0"
description = ""
authors = ["NasirovEF <i@ef-nasirov.ru>"]
readme = "README.md"
packages = [{include = "homework13"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
